Fix dark mode bug in masthead

--- a/themes/basic/style.css
+++ b/themes/basic/style.css
@@ -84,6 +84,7 @@ article {
 }
 .masthead {
     grid-column:1/9;
+    color:#ddd;
 }
 .main-nav {
     display: inline;
